--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <title>Contact - Comets for Better Transit</title>
-    <link rel="stylesheet" href="/cfbt-web/assets/css/main.css" />
-    <link rel="shortcut icon" type="image/svg" href="/cfbt-web/assets/img/logo_square.svg" />
+    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="shortcut icon" type="image/svg" href="/assets/img/logo_square.svg" />
   </head>
   <body class="bg-gray-100 text-gray-800">
 
@@ -15,10 +15,10 @@
         <div class="flex w-full flex-wrap items-center justify-between px-3">
 
           <div>
-            <a class="mx-4 flex items-center justify-start text-white lg:mb-0 lg:mt-0" href="/cfbt-web/index.html">
+            <a class="mx-4 flex items-center justify-start text-white lg:mb-0 lg:mt-0" href="/index.html">
               <img
                 class="mr-0"
-                src="/cfbt-web/assets/img/logo.svg"
+                src="/assets/img/logo.svg"
                 style="height: 50px"
                 alt="CFBT Logo"
                 loading="lazy" />
@@ -33,10 +33,10 @@
               <a href="javascript:void(0)" class="text-right text-white text-4xl mr-6" onclick="toggleMenu()">&times;</a>
             </div>
 
-            <a href="/cfbt-web/index.html" class="p-4 pl-8 md:pl-4 hover:underline">Home</a>
-            <a href="/cfbt-web/about.html" class="p-4 pl-8 md:pl-4 hover:underline">About</a>
-            <a href="/cfbt-web/randi.html" class="p-4 pl-8 md:pl-4 hover:underline">Resources & Info</a>
-            <a href="/cfbt-web/contact.html" class="p-4 pl-8 md:pl-4 md:mr-12 hover:underline">Contact</a>
+            <a href="/index.html" class="p-4 pl-8 md:pl-4 hover:underline">Home</a>
+            <a href="/about.html" class="p-4 pl-8 md:pl-4 hover:underline">About</a>
+            <a href="/randi.html" class="p-4 pl-8 md:pl-4 hover:underline">Resources & Info</a>
+            <a href="/contact.html" class="p-4 pl-8 md:pl-4 md:mr-12 hover:underline">Contact</a>
           </div>
 
           <div class="flex items-center md:hidden">
@@ -49,7 +49,7 @@
       </nav>
 
       <div class="relative">
-        <div class="min-h-[312px] bg-fit bg-fixed 2xl:bg-cover 2xl:bg-center bg-no-repeat h-full w-full" style="background-image:url('/cfbt-web/assets/img/bg.jpg')"></div>
+        <div class="min-h-[312px] bg-fit bg-fixed 2xl:bg-cover 2xl:bg-center bg-no-repeat h-full w-full" style="background-image:url('/assets/img/bg.jpg')"></div>
         <div class="text-xl md:text-4xl text-center leading-snug font-mono w-fit shadow-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mx-auto py-6 px-12 bg-black text-white">
           Contact Us
 
