--- a/index.html
+++ b/index.html
@@ -65,25 +65,6 @@
 
   
     <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
-      <div class="text-xl p-2">Silver Line Station Areas Plan - Public Open House</div>
-      <div class="m-2">
-        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
-          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
-        </svg>
-        Tue Feb 6th
-      </div>
-      <div class="m-2">
-        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
-          <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
-        </svg>
-        6-8pm in Harrington Library (Rooms 134A and B)
-      </div>
-      <div><p>The Public Open House will be an opportunity to review and share your feedback on the draft Land Use, Transportation, and Open Space Framework Plans for the 12th Street and Shiloh Road Station areas, designed to guide future development and community investment.</p>
-</div>
-    </div>
-  
-    <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
       <div class="text-xl p-2">Tabling at Love the Earh Event</div>
       <div class="m-2">
         <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
@@ -117,7 +98,26 @@
         </svg>
         7pm in SCI 3.230
       </div>
-      <div><p>Our 2nd general body organization meeting with pizza provided.</p>
+      <div><p>Our 2nd general body organization meeting of the semester. With pizza provided.</p>
+</div>
+    </div>
+  
+    <div class="flex-col text-center p-4 m-2 shadow-lg lg:max-w-[50%]">
+      <div class="text-xl p-2">Pizzageneral 3</div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+          <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+        </svg>
+        Wed Mar 27th
+      </div>
+      <div class="m-2">
+        <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+          <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+        </svg>
+        7pm in SCI 3.230
+      </div>
+      <div><p>Our 3rd general body organization meeting of the semester. Pizza provided.</p>
 </div>
     </div>
   
