--- a/about.html
+++ b/about.html
@@ -79,11 +79,13 @@
 
 <div class="flex justify-center place-items-center flex-wrap">
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/ben-headshot.jpg" />
     <div class="text-center">
       <div>Ben</div>
       <div>President</div> 
-      <div></div> 
+      <div>Accounting, Public Affairs minor, Class of 2027</div> 
+      <div>(512) 521-8180</div>
+      <div>bdg220001@utdallas.edu</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
@@ -97,7 +99,15 @@
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>Liam Nichols</div>
+      <div>Robert</div>
+      <div>Secretary</div>
+      <div>GIS, Class of 2027</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>Liam</div>
       <div>Policy Researcher</div>
       <div>Mathematics, Class of 2026</div>
     </div>
@@ -105,31 +115,14 @@
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>Robert</div>
-      <div>Secretary</div>
-      <div>Class of 2027</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
-    <div class="text-center">
-      <div>Johnathan Dang</div>
-      <div>Social Media</div>
-      <div>Economics, Class of 2025</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/emma.jpg" />
-    <div class="text-center">
-      <div>Emma Liu</div>
-      <div>Event Coordinator</div>
-      <div>Chemistry, Class of 2025</div>
+      <div>Colin</div>
+      <div>Event Manager</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/theo.png" />
     <div class="text-center">
-      <div>Theo Henson</div>
+      <div>Theo</div>
       <div>Website Manager</div>
       <div>Computer Science, Class of 2027</div>
     </div>
@@ -137,9 +130,9 @@
   <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>Joaquin Moreno</div>
+      <div>Matthew</div>
       <div>Treasurer</div>
-      <div>Political Science, Class of 2025</div>
+      <div>Accounting, Class of 2027</div>
     </div>
   </div>
 </div>
