--- a/randi.html
+++ b/randi.html
@@ -32,7 +32,6 @@ banner_text: |
   <a class="link" href="#comet-cruiser">Comet Cruiser</a>, 
   <a class="link" href="#dart-busses">Dart Busses</a>, 
   <a class="link" href="#utd-utsw-shuttle">UTD-UTSW Shuttle</a>, 
-  <a class="link" href="#core-shuttle">CORE Shuttle</a>, 
   <a class="link" href="#silver-line">Silver Line</a>.
 </p>
 
@@ -95,40 +94,14 @@ banner_text: |
 
 <hr />
 
-<h4 id="core-shuttle" class="subheader">The CORE Shuttle</h4>
-
-<p>
-  The City of Richardson has partnered with UT Dallas to provide free shuttle service between our campus and the Richardson CORE District for UTD students on Friday and Saturday evenings, from 7:00 p.m. to 11:00 p.m.
-  For more information, visit the <a class="link" href="https://services.utdallas.edu/transit/core/">UTD CORE Shuttle webpage</a>.
-</p>
-
-<ul class="list-disc">
-  <li>UTD Campus at Synergy Park near Northside Blvd. entrance.
-      Departures: 7:00, 8:00, 9:00, 10:00 p.m.</li>
-  <li>UTD Campus at Bus Station across from Activities Center.
-      Departures: 7:05, 8:05, 9:05, 10:05 p.m.</li>
-  <li>Interurban near Four Bullets Brewery.
-      Departures: 7:20, 8:20, 9:20, 10:20 p.m.</li>
-  <li>Chinatown near Dallas Chinese Community Center.
-      Departures: 7:25, 8:25, 9:25, 10:25 p.m</li>
-  <li>Downtown in parking lot on north side of Main St., between Texas St. and McKinney St.
-    Departures: 7:30, 8:30, 9:30, 10:30 p.m.</li>
-  <li>Heights near Alamo Drafthouse Cinema.
-      Departures: 7:35, 8:35, 9:35, 10:35 p.m.</li>
-  <li>Lockwood near Happy Hippie Brewing Company.
-      Departures: 7:40, 8:40, 9:40, 10:40 p.m.</li>
-</ul>
-
-<hr />
-
 <h4 id="silver-line" class="subheader">Silver Line</h4>
 
 <p>
   The <a class="link" href="https://www.dart.org/about/plans-projects-and-initiatives/expansion/silver-line-project">Silver Line</a>
-  is a DART train line in the process of being constructed, with service anticipated in late 2025 to mid-2026.
+  is a DART train line opening on October 25, 2025.
   It will run east to west from Grapevine to Plano, notably with a stop right at UTD, just north of the Northside Apartments.
-  Once it is constructed, you will be able to easily get to, for example, the DFW airport in much less time than the current route (taking the train south, downtown, then northwest out to the airport) and for much less money than an Uber or Lyft.
-  You will also be able to take it east to get to CityLine/Bush quicker than the bus.
+  Once it is opened, you will be able to easily get to, for example, the DFW Airport in much less time than the current route (taking the train south, downtown, then northwest out to the airport) and for much less money than an Uber or Lyft.
+  You will also be able to take it east to get to CityLine/Bush quicker than the bus to connect with the Red and Orange Lines.
 </p>
 
 <hr />
